# ts-lyric-bot

./: .dockerignore  .env.defaults  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
code/: __init__.py  build_datasets.py  fetch_ts_data.py  model_selection.py  ngrams.py  nltk_model_scratch.py  save_utils.py  sentence_scores.py  trigram_scratch.py  ts.py  ts_lyric_bot.py  ts_lyric_bot.sh  vocabulary_patch.py
code/bot/: bot_tweet.py  ts_lyric_bot.py  ts_lyric_bot.sh  twitter_bot_auth.py
code/dataset_tools/: all_song_ids_1640652185.py  build_datasets.py  fetch_ts_data.py  ts_song_ids.py
code/model_select/: model_selection.py  sentence_scores.py
data/: README.md
data/saved_models/: kn3_redtv.json
db/changelog/: changelog.xml  liquibase.properties
mysite/mysite/: settings.py  urls.py
mysite/tweets/: models.py  views.py
mysite/tweets/migrations/: 0001_initial.py
notebooks/: fetch_data.ipynb  model_selection.ipynb  sentence_scores.ipynb  test_final_model.ipynb
