[tool.poetry]
name = "ts-lyric-bot"
version = "0.1.0"
description = ""
authors = ["anji <anji6789@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
scikit-learn = "^0.24.1"
ipython = "^7.21.0"
mypy = "^0.812"
requests = "^2.25.1"
tqdm = "^4.59.0"
python-dotenv = "^0.15.0"
nltk = "^3.5"
beautifulsoup4 = "^4.9.3"
Unidecode = "^1.2.0"
matplotlib = "^3.3.4"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
